@@ -5,6 +5,9 @@ Revision history for XML-Grammar-Fiction.
     * lib/XML/Grammar/FictionBase/XSLT/Converter.pm
         - Refactoring: _data_dir now initialized from default => sub { ... }.
         - Refactoring: _rng now initialized from default => sub { ... }.
+    * Convert to XML::GrammarBase :
+        - lib/XML/Grammar/Fiction/ToHTML.pm
+        - lib/XML/Grammar/Fiction/ToDocBook.pm
 
 0.12.5      Sat 27 Apr 14:25:15 IDT 2013
     * Do not try to compile scripts/bump-version-number.pl .
